2004-04-12  Matti Aarnio  <mea@zmailer.org>

	* include/libz.h, transports/mailbox/mailbox.c,
	  transports/mailbox/mboxpath.c:
	    Match prototypes of crc32() and pjwhash32() properly..

	* router/daemonsub.c, router/functions.c, router/prototypes.h:
	  router/router.c, include/libsh.h, libsh/builtins.c, router/db.c,
	    Couple additional fixes on memory allocation/free strategies.
	    Improved memory recycling, freeing objects no longer needed.
	    (Also cleaning up a bit of extern declarations..)

	* smtpserver/policytest.h, smtpserver/subdaemon-trk.c:
	    Oops..  Reserved too small buffer for IPv6 address
	    hex storage. (Used in rate-tracking.)

	* include/libz.h:
	    Publish prototypes for crc32*() functions.

	* include/io.h:
	    Allow selective io-redirection disabling

	* router/router.c,  man/router.8.in, proto/cf/aliases.cf,
	  proto/cf/fqdnaliases.cf, proto/cf/server.cf, router/functions.c,
	  router/prototypes.c:
	    Created  -Ismtpserver  function mode, that calls
	    the router script interpreter's  "$(server ..)" function
	    in definitely secure manner.  This is for use under
	    new smtpserver's router interaction logic.
	    Also created  $(isinteractive)  script function, that
	    can be used in short-circuiting potentially lengthy expansions
	    that are not really interesting in this mode.

	* router/router.c, router/router.h, router/daemonsub.c,
	  router/Makefile.in, router/dateparse.c, router/db.c,
	  router/functions.c, router/prototypes.c, router/rfc822.c,
	  router/rfc822hdrs.c, router/rfc822walk.c, router/rtsyslog.c,
	  router/shliaise.c:
	    Created "router.h"  and used it as only include file
	    for all source files.

	* smtpserver/contentpolicy.c, smtpserver/policytest.c:
	    Minor edits.

	* smtpserver/smtprouter.c, smtpserver/Makefile.in:
	    Killed the file.  All the functionality went into
	    subdaemon-rtr.c  file.

	* smtpserver/smtpserver.c:
	    Removed vestiges of router running as a sub-process of