@@ -1,5 +1,10 @@
 2004-04-12  Matti Aarnio  <mea@zmailer.org>
 
+	* lib/fdpassing.c, lib/zshmmibattach.c, subdaemon-rtr.c:
+	    Add a few  fcntl(fd,F_SETFD,FD_CLOEXEC)  calls into
+	    selected places so that exec()ed subprocesses won't
+	    inherit undesirable filehandles.
+
 	* include/libz.h, transports/mailbox/mailbox.c,
 	  transports/mailbox/mboxpath.c:
 	    Match prototypes of crc32() and pjwhash32() properly..
